--- a/design.css
+++ b/design.css
@@ -1,15 +1,55 @@
 body {
     background-color: #c1d3fe;
 }
+*{
+    margin: 0%;
+    padding:0%;
+}
 
 .container {
     display: grid;
     /* grid-auto-flow: column;
     grid-auto-columns: 30rem; */
-    grid-template-columns: repeat(auto-fit 20rem);
-    gap: 2rem;
+    /* grid-template-columns: repeat(auto-fit 20rem);
+    gap: 2rem; */
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    
 
 }
+
+.box1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    flex-flow: wrap;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #8d99ae;
+    text-align: center;
+    
+    
+
+}
+img{
+    border: 4px solid #e7ecef ;
+    border-radius: 2%;
+}
+
+.box2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    flex-wrap: wrap;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #8d99ae;
+    text-align: center;
+}
+
 
 h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -18,6 +58,7 @@ h1 {
     align-items: center;
     background-color: #aeb8fe;
     margin: auto;
+    padding-left: 30px;
 
 }
 section {
