--- a/main.css
+++ b/main.css
@@ -1,78 +1,83 @@
 * {
- font-family: Arial, Helvetica, sans-serif; 
-}  
+      font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-size: 20px;
+      color: #f4d35e;
+}
 
- header {
-   text-align: center;
-   text-size-adjust: 5px;
-   font-weight: bolder;
-   text-decoration: underline;
- }
- 
- main {
-   font-weight: bold;
-   font-size: medium;
-   font-style: italic;
-   color: grey;
-   text-align: left;
- }
- 
-*{background-color: #e3f2fd;}
+.flexbox ul li:hover, a:hover {
+    color: #ffb627;
+    font-size: 20px;
+}
 
-h2 {
-    font-size: 1cm;
-    font-weight: bolder;
-    color: black;
-    background-color: #eff6e0;
+a{
+    text-decoration: none;
+    color: #99d98c;
+}
+.flexbox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    margin-left: 0%;
+    font-size: 15px;
+    font-weight: 200px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #99d98c;
+    margin: 0;
+    }
+
+
+
+.profile-image {
+ float: right;
+ position: absolute;
+ right: 10px;
+
+    }
+
+
+
+main {
+    font-weight: bold;
+    font-size: 15px;
+    font-style: italic;
+    color: #adb5bd;
+}
+
+header ul li {
+    display: inline;
+    padding-right: 20px;
     
 }
- image {
-size: 7cm;
-border: 2px;
-border-color: aliceblue;
-float: left;
- }
- .hike {
-    float:left;
-    border-width: 1px;
-    border-color: azure;
-    size: 1cm
- }
- 
- h3 {
-   font-size: 1cm;
-    font-weight: bolder;
-    color: black;
-    background-color: #fcd5ce;
- }
 
 
- .asec {
-   float: left;
-   size: 0.5cm;
-   position:absolute;
-   clear:both
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #0a9396;
+    background-color:#dde5b6;
+    display:inline;
+    font-size: 25px;
+}
 
-   
- }
+li:hover {
+    font-weight: bold;
+    color: #adc178;
+    font-size: 2rem;
+}
 
- h4 {
-   font-size: 1cm;
-    font-weight: bolder;
-    color:black;
-    background-color: #bfd7ea;
+body {
+    background-color: #fdfcdc;
 
 }
 
-
-.restaurant {
-   float: right;
-   size: 5px;
+footer {
+    color: #8d99ae;
 }
 
-a {
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: larger;
-   color: #f29559;
 
-}
+
