--- a/main.css
+++ b/main.css
@@ -5,6 +5,63 @@
       color: #f4d35e;
 }
 
+.cartoon-animation {
+    float: right;
+    margin: 50px;
+   padding-top: 730px;
+   padding-right: 150px;
+ }
+ 
+ 
+.cartoon-animation {
+    animation-name: animated-cartoon-animation;
+    animation-name: wave;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+
+}
+
+#Loshi {
+    animation: jump 0.6s linear infinite alternate;
+}
+
+@keyframes jump {
+    0% {transform: translateY(0px); }
+    50% {transform: translateY(-10px); }
+    100% {transform: translateY(0px); }
+}
+
+
+.headline {
+    animation-name: animated-headline;
+    animation-duration: 10s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1s;
+    animation-iteration-count: 3;
+    animation-fill-mode: forwards;
+}
+@keyframes animated-headline {
+    0% {
+        background-color: #caf0f8;
+    }
+    50% {
+        background-color: #ffddd2;
+        color: #34a0a4;
+    }
+    100% {
+        background-color: #d8e2dc;
+    }
+
+
+}
+
+.headline {
+    font-size: 35px;
+    padding-bottom: 15px;
+    color: grey;
+}
+
 .flexbox ul li:hover, a:hover {
     color: #ffb627;
     font-size: 20px;
@@ -50,7 +107,13 @@ header ul li {
     display: inline;
     padding-right: 20px;
     
+    
 }
+
+
+
+
+
 
 
 h2,
